[gd_scene load_steps=12 format=2]

[ext_resource path="res://Ability/Charge/Charge.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ability/Charge/Abilities/ManaExplosion/effect_4.png" type="Texture" id=2]
[ext_resource path="res://Ability/Charge/Abilities/ManaExplosion/ManaExplosion.gd" type="Script" id=3]
[ext_resource path="res://Ability/Charge/Abilities/ManaExplosion/skin.png" type="Texture" id=4]

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.490798, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.554545 ), -1.69091, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=1]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = -100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
scale = 0.03
scale_curve = SubResource( 6 )
color = Color( 0.0509804, 0.615686, 0.752941, 1 )
color_ramp = SubResource( 4 )

[sub_resource type="CircleShape2D" id=7]

[node name="ManaExplosion" instance=ExtResource( 1 )]
script = ExtResource( 3 )
title = "Mana explosion"
cooldown = 1.0
mana_cost = 2
damage = 20
max_speed = 500.0
min_speed = 50.0

[node name="Particles2D" type="Particles2D" parent="." index="2"]
material = SubResource( 2 )
amount = 20
process_material = SubResource( 1 )
texture = ExtResource( 2 )

[node name="Hitbox" type="Area2D" parent="." index="3"]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 7 )
disabled = true

[node name="Sprite" type="Sprite" parent="." index="5"]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )

[connection signal="execute_charge" from="." to="." method="_on_ManaExplosion_execute_charge"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
